[package]
name = "stelle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
chrono = "0.4.31"
cron = "0.12.0"
eyre = "0.6.8"
md5 = "0.7.0"
random = "0.14.0"
reqwest = { version = "0.11.22", features = [ "json" ] }
serde = { version = "1.0.190", features = [ "derive" ] }
serde_json = "1.0.108"
telegram_notifyrs = "0.1.3"
tokio = { version = "1.33.0", features = [ "rt", "rt-multi-thread", "macros" ]}

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
